# services/backend/src/main/kotlin/org/dpp/tradelab/user/api/UserSettingsApi.kt
@@ -1,0 +1,13 @@
+package org.dpp.tradelab.user.api
+
+import org.dpp.tradelab.user.model.FeedType
+import java.util.UUID
+
+data class UserSettingsDto(
+    val userId: UUID,
+    val feedType: FeedType
+)
+
+interface UserSettingsApi {
+    fun getAllUserSettings(): List<UserSettingsDto>
+}
